fix: fall back to next LS when formatting returns no edits (#1433)